# Tsunagi

./: CMakeLists.txt  README.md
include/: message.h  queue_manager.h  server.h
lib/javascript.lib/: client.js  package-lock.json  package.json  simulate_email_only_metrics.js  simulate_email_rush_metrics.js  tsunagi.js  tsunagi.lib.js
lib/python.lib/: tsunagi.py
src/: main.cpp  message.cpp  queue_manager.cpp  server.cpp
